# AI-Python-study

./: .gitignore  pyproject.toml
study/ML/: 02_特征预处理.py  03_鸢尾花数据集.py  04_网格搜索与交叉验证.py
study/ML/01分类/: 01_KNN近邻算法.py  04_网格搜索与交叉验证.py  05_手写数字识别.py
study/ML/02线性回归/: 01_线性回归API入门.py  02_波士顿房价预测_正规方程.py  03_波士顿房价预测_梯度下降.py  04_L1和L2正则化解决过拟合.py
study/ML/03逻辑回归/: 01_逻辑回归_癌症预测.py  02_混淆矩阵_精确率_召回率_F1值.py  03_电信用户流失预测.py
study/ML/04_决策树/: 01_泰坦尼克号.py  02_泰坦尼克号优化_kaggle.py  03_回归决策树.py
study/ML/04_决策树/titanic/: my_kaggle_submission.csv
study/ML/05集成学习/: 01_随机森林算法.py  02_AdaBoost算法_葡萄酒.py  03_GBDT_泰坦尼克号.py  04_XGBoost_红酒品质分类.py  05_朴素贝叶斯.py
study/ML/05集成学习/data/: my_kaggle_submission.csv  书籍评价.csv  红酒品质分类_test.csv  红酒品质分类_train.csv
study/ML/05集成学习/model/: 红酒品质分类.pkl
study/ML/05集成学习/titanic/: my_kaggle_submission.csv
study/ML/06聚类算法/: 01_Kmeans.py  02_多种算法.py  03_用户分群案例.py
study/ML/07数据挖掘案例/load_predict_project/: README.md
study/ML/07数据挖掘案例/load_predict_project/model/: xgb_20260328.pkl
study/ML/07数据挖掘案例/load_predict_project/src/: predict.py  train.py
study/ML/07数据挖掘案例/load_predict_project/utils/: common.py  log.py
study/matplotlib/: test01.py  气温散点.py
study/numpy/: test01.py  test02.py  test03.py
study/numpy/testdata/: test1.csv  test2.csv
study/pandas/: test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08.py  test09.py  test10.py  test11.py  test12.py
study/pandas/testdata/: test.csv
