[project]
name = "ai-python-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pymongo>=4.16.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
